# gatekeeper

./: .env  .gitignore  Makefile  README.md  pyproject.toml
gatekeeper/: __init__.py  config.py  models.py  settings.py
gatekeeper/api/: __init__.py  response.py  teams.py  users.py
gatekeeper/controllers/: __init__.py  board.py  response.py  teams.py  users.py
gatekeeper/models/: __init__.py  belong_to.py  team.py  user.py
gatekeeper/whiteboard/: __init__.py  whiteboard.py
slack_api/: .env  .gitignore  Dockerfile  README.md  entrypoint.sh  package-lock.json  package.json
slack_api/deploy/: cloudformation.template.yml  config.json  create-config-files.sh
slack_api/deploy/params/: dev.params.json  prod.params.json  qual.params.json
slack_api/src/: channels.js  index.js  routes.js  verifySignature.js
slack_api/src/controllers/: commandsController.js  interactionsController.js  messageController.js  slackController.js
slack_api/src/services/: slackService.js  teamService.js
tests/: test_gatekeeper.py
