[tool.poetry]
name = "gatekeeper"
version = "0.1.0"
description = ""
authors = ["Stephen Onnen <stephen.onnen@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.6"
Flask = "^1.1"
Flask-Restful = "^0.3.7"
"RPi.GPIO" = "^0.7.0"
Gunicorn = "^19.9"
Flask-SQLAlchemy = "^2.4"

[tool.poetry.dev-dependencies]
pytest = "^3.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
